# qol-mapper

./: .gitattributes  .gitignore  README.md  next.config.ts  package-lock.json  package.json
data-pipeline/: PIPELINE.md  pyproject.toml
data-pipeline/scripts/: download_egrid.py  download_epa_pm25.py  download_nlcd_tree.py  generate_score_grids.py  process_climate_vulnerability.py  process_crime.py  process_grocery.py  process_home_prices.py  process_noise.py  process_pm25.py  process_power_plants.py  process_protected_areas.py  process_rainfall.py  process_schools.py  process_sunshine.py  process_temperateness.py  process_thunderstorms.py  process_ticks.py  process_topography.py  process_transit.py  process_tree_canopy.py  process_universities.py  process_voting.py  process_walkability.py  process_water_quality.py  score_grid.py  utils.py
public/: DATA.md
public/data/: noise-grid.json  pm25-grid.json  ticks-score.json
public/tiles/: climate-vulnerability.pmtiles  crime.pmtiles  grocery.pmtiles  home-prices.pmtiles  noise.pmtiles  pm25.pmtiles  power-plants.pmtiles  protected-areas.pmtiles  school-quality.pmtiles  ticks.pmtiles  transit.pmtiles  tree-canopy.pmtiles  university-quality.pmtiles  voting-dem.pmtiles  voting-gop.pmtiles  water-quality.pmtiles
src/app/: globals.css  layout.tsx  page.tsx
src/components/DetailPanel/: DetailPanel.tsx  (+1 more)
src/layers/: color-ramps.ts  init.ts  registry.ts  types.ts
src/lib/: compositeRenderer.ts  constants.ts  geocoding.ts  pmtiles.ts  rasterQuery.ts  scoring.ts  zillow.ts
src/stores/: layerStore.ts  seasonStore.ts
(+30 files in other folders)
