[project]
name = "qol-mapper-pipeline"
version = "0.1.0"
description = "Data processing pipeline for QoL Mapper"
requires-python = ">=3.10"
dependencies = [
    "geopandas>=0.14",
    "rasterio>=1.3",
    "shapely>=2.0",
    "scipy>=1.11",
    "pandas>=2.0",
    "requests>=2.31",
    "numpy>=1.24",
    "openpyxl>=3.1",
    "pyproj>=3.6",
    "fiona>=1.9",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
]

[tool.ruff]
line-length = 100

[tool.uv]
dev-dependencies = [
    "ruff",
    "mypy",
]
